--- a/Next_Gen_Dev/my-portfolio/src/app/globals.css
+++ b/Next_Gen_Dev/my-portfolio/src/app/globals.css
@@ -18,12 +18,7 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background:linear-gradient(60deg, rgba(0, 0, 0, 0.35), rgba(255, 255, 255, 0.801)) , url("../../public/bg-image.png") no-repeat center / cover fixed;
 }
 
 @layer utilities {
